planet styling bug fixed no longer moves off screen

--- a/src/components/Planets/Jupiter/style.css
+++ b/src/components/Planets/Jupiter/style.css
@@ -4,24 +4,25 @@
     }
 }
 @keyframes jupiterOrbit {
-    from { transform: rotate(0deg) translateX(300%) rotate(0deg); }
-    to   { transform: rotate(360deg) translateX(300%) rotate(-360deg); }
+    from { transform: rotate(0deg) translateX(175%) rotate(0deg); }
+    to   { transform: rotate(360deg) translateX(175%) rotate(-360deg); }
   }
 
 .jupiter{
-    width: 5%;
-    height: 9%;
+    width: 10%;
+    height: 17%;
     position: absolute;
-    top: 45%;
+    top: 75%;
     bottom: 0;
-    left: 49%;
+    left: 46%;
     right: 0;
     margin:0;
     overflow: hidden;
     border-radius: 50%;
     box-shadow: 0 0 20px 20px #000 inset, 0 0 20px 2px #000;
     z-index: 0;
-    animation: jupiterOrbit 5s linear infinite;
+    animation: jupiterOrbit 50s linear infinite;
+    animation-delay: -3;
 }
 .jupiter:after {
     position: static;
@@ -46,5 +47,6 @@
 
 .jupiter:hover{
     cursor:pointer;
-    transform:scale(1.5)
+    transform:scale(1.5);
+    animation-play-state:paused
 }
