--- a/src/components/Planets/Mercury/Mercury.css
+++ b/src/components/Planets/Mercury/Mercury.css
@@ -29,7 +29,7 @@
     width: 1.2rem;
     height: 1.2rem;
     position: absolute;
-    top: 53%;
+    top: 78%;
     bottom: 0;
     left: 50%;
     right: 0;
